Fix: Removed gaps on sides of product images by using object-fit: cover

--- a/src/index.css
+++ b/src/index.css
@@ -2829,7 +2829,7 @@ h6 {
 .pd-main-img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .pd-tag {
